--- a/README.org
+++ b/README.org
@@ -44,11 +44,8 @@ the elapsed time in the input =ctimer_t= object.
 #include <stdio.h>
 #include "ctimer.h"
 
-// [C ONLY] external linkage for `ctimer.h` functions
-// (*once per translation unit*)
-#ifndef __cplusplus
-__CTIMER_EXTERN_INLINE_DECL;
-#endif // __cplusplus
+// external linkage for `ctimer.h` functions (*once per translation unit*)
+__CTIMER_EXTERN_INLINE_DECL;  // only expands in C, not C++
 
 int main () {
     ctimer_t t;
